overflow fix

--- a/coden/static/css/services.css
+++ b/coden/static/css/services.css
@@ -1,11 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@200&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap');
+html,
+body {
+    overflow-x: hidden;
+}
+
 body {
     /* background-color: #1C2541; */
     background-color: #d4dee1;
     box-sizing: border-box;
     padding: 0;
-    overflow-x: hidden;
     /* font-family: 'Roboto', sans-serif; */
     /* font-family: 'Poppins', sans-serif; */
     /* color:#fff; */
